# btrfs-progs

./: .codespellrc  .editorconfig  .gitignore  .gitlab-ci.yml  .hgtags  .readthedocs.yaml  .travis.yml  64-btrfs-dm.rules  64-btrfs-zoned.rules  Android.mk  CHANGES  Dockerfile  INSTALL  Makefile  Makefile.extrawarn  Makefile.in  Makefile.inc.in  README.md  VERSION  androidcompat.h  autogen.sh  backref.c  backref.h  bcp  bit-radix.c  bit-radix.h  bitops.h  btrfs-calc-size.c  btrfs-completion  btrfs-convert.c  btrfs-corrupt-block.c  btrfs-crc.c  btrfs-debug-tree.c  btrfs-debugfs  btrfs-defrag.c  btrfs-find-root.c  btrfs-fragments.c  btrfs-image.c  btrfs-list.c  btrfs-list.h  (+160 more)
.github/workflows/: artifacts-static-build.yml  ci-build-test-fast.yml  ci-build-test.yml  ci-sanitize.yml  codeql.yml  codespell.yml  coverage.yml  (+8 more)
Documentation/: Administration.rst  Auto-repair.rst  Balance.rst  CHANGES.rst  Checksumming.rst  CmdLineConventions  CodingConventions  Common-features.rst  Compression.rst  Contributors.rst  Convert.rst  Custom-ioctls.rst  Deduplication.rst  Defragmentation.rst  DocConventions  DocConventions.asciidoc  DocConventions.rst  Experimental.md  Experimental.rst  Feature-by-version.rst  Flexibility.rst  Glossary.rst  Hardware.rst  Inline-files.rst  Interoperability.rst  Introduction.rst  Kernel-by-version.rst  Makefile  Makefile.in  Makefile.sphinx  Qgroups.rst  Quick-start.rst  Reflink.rst  ReleaseChecklist  Resize.rst  Scrub.rst  Seeding-device.rst  Send-receive.rst  Source-repositories.rst  Status.rst  (+123 more)
android-compat/: btrfs_pthread.c  btrfs_pthread.h  pthread.c  pthread.h  qsort.c  qsort.h
check/: btrfsck.h  clear-cache.c  clear-cache.h  common.c  common.h  lowmem.c  lowmem.h  main.c  mode-common.c  mode-common.h  mode-lowmem.c  mode-lowmem.h  mode-original.c  mode-original.h  original.h  qgroup-verify.c  qgroup-verify.h  repair.c  repair.h
ci/: README.md  build-default  build-dep-reiserfs  build-dep-zstd  ci-build-almalinux10  ci-build-centos7  ci-build-centos8  ci-build-leap153  ci-build-leap154  ci-build-leap156  ci-build-musl  ci-build-musl-i386  ci-build-rockylinux9  ci-build-tumbleweed
cmds/: balance.c  commands.h  device.c  filesystem-du.c  filesystem-usage.c  filesystem-usage.h  filesystem.c  inspect-dump-super.c  inspect-dump-tree.c  inspect-tree-stats.c  inspect.c  property.c  props.h  qgroup.c  qgroup.h  quota.c  receive-dump.c  receive-dump.h  receive.c  reflink.c  replace.c  rescue-chunk-recover.c  rescue-fix-data-checksum.c  rescue-super-recover.c  rescue.c  rescue.h  restore.c  scrub.c  send.c  subvolume-list.c  subvolume.c  subvolume.h
common/: array.c  array.h  box.h  clear-cache.c  compat.c  compat.h  cpu-utils.c  cpu-utils.h  defs.h  device-scan.c  device-scan.h  device-utils.c  device-utils.h  extent-cache.c  extent-cache.h  extent-tree-utils.c  extent-tree-utils.h  filesystem-utils.c  filesystem-utils.h  format-output.c  format-output.h  fsfeatures.c  fsfeatures.h  help.c  help.h  inject-error.c  inject-error.h  internal.h  messages.c  messages.h  open-utils.c  open-utils.h  parse-utils.c  parse-utils.h  path-utils.c  path-utils.h  rbtree-utils.c  rbtree-utils.h  repair.c  repair.h  (+22 more)
config/: ax_gcc_builtin.m4
convert/: Makefile  common.c  common.h  main.c  source-ext2.c  source-ext2.h  source-fs.c  source-fs.h  source-reiserfs.c  source-reiserfs.h
crypto/: blake2-config.h  blake2.h  blake2b-avx2.c  blake2b-ref.c  blake2b-round.h  blake2b-sse2.c  blake2b-sse41.c  crc32c-pcl-intel-asm_64.S  crc32c.c  crc32c.h  hash-speedtest.c  hash-vectest.c  hash.c  hash.h  sha-private.h  sha.h  sha224-256.c  sha256-x86.c  xxh_x86dispatch.c  xxhash.c  xxhash.h
image/: Makefile  common.c  common.h  image-create.c  image-restore.c  main.c  metadump.h  sanitize.c  sanitize.h
include/: ioctl.h  kerncompat.h
kernel-lib/: bitmap.h  bitops.h  crc32c.c  interval_tree_generic.h  list.h  list_sort.c  list_sort.h  mktables.c  overflow.h  radix-tree.c  radix-tree.h  raid56.c  raid56.h  rbtree.c  rbtree.h  rbtree_augmented.h  rbtree_types.h  tables.c  trace.h
kernel-shared/: README.md  accessors.c  accessors.h  async-thread.c  async-thread.h  backref.c  backref.h  compression.h  ctree.c  ctree.h  delayed-ref.c  delayed-ref.h  dir-item.c  disk-io.c  disk-io.h  extent-io-tree.c  extent-io-tree.h  extent-tree.c  extent_io.c  extent_io.h  file-item.c  file-item.h  file.c  free-space-cache.c  free-space-cache.h  free-space-tree.c  free-space-tree.h  inode-item.c  inode.c  locking.c  locking.h  messages.c  messages.h  misc.h  print-tree.c  print-tree.h  root-tree.c  send.h  transaction.c  transaction.h  (+11 more)
libbtrfs/: crc32c.c  crc32c.h  ctree.h  extent-cache.h  extent_io.h  ioctl.h  kerncompat.h  libbtrfs.sym  send-stream.c  send-stream.h  send-utils.c  send-utils.h  send.h  version.h.in
libbtrfsutil/: README.md  btrfs.h  btrfs_tree.h  btrfsutil.h  btrfsutil_internal.h  errors.c  filesystem.c  libbtrfsutil.pc.in  libbtrfsutil.sym  qgroup.c  stubs.c  stubs.h  subvolume.c
m4/: ax_gcc_version.m4  btrfs_detect_cstd.m4
man/: Makefile  btrfs-convert.8.in  btrfs-debug-tree.8.in  btrfs-find-root.8.in  btrfs-image.8.in  btrfs-map-logical.8.in  btrfs-show-super.8.in  btrfs-show.8.in  btrfs-zero-log.8.in  btrfs.8.in  btrfsck.8.in  btrfsctl.8.in  btrfstune.8.in  fsck.btrfs.8.in  mkfs.btrfs.8.in
mkfs/: Makefile  common.c  common.h  main.c  rootdir.c  rootdir.h
pthread/: btrfs_pthread.c  btrfs_pthread.h  pthread.sym
tests/: Makefile  README.md  annotate.sh  array-test.c  btree-test.c  build-tests.sh  check-setup.sh  clean-tests.sh  cli-tests.sh  common  common.convert  common.local  convert-tests.sh  export-tests.sh  export-testsuite.sh  fsck-tests.sh  fsstress.c  fssum.c  fuzz-tests.sh  hash-tests.sh  ioctl-test.c  json-formatter-test.c  library-test.c  misc-tests.sh  mkfs-tests.sh  nullb  scan-results.sh  sha224-256.c  string-table-test.c  test-console.sh  testsuite-files
travis/: build-default  build-dep-reiserfs  build-dep-zstd
tune/: change-csum.c  change-metadata-uuid.c  change-uuid.c  convert-bgt.c  convert-remap-tree.c  main.c  quota.c  seeding.c  tune.h
(+511 files in other folders)
